--- a/files/en-us/learn/javascript/client-side_web_apis/client-side_storage/index.html
+++ b/files/en-us/learn/javascript/client-side_web_apis/client-side_storage/index.html
@@ -594,7 +594,7 @@ function deleteItem(e) {
 }</pre>
  </li>
  <li>
-  <p>The following snippet is taken from inside <code>fetchVideoFromNetwork()</code> — here we fetch MP4 and WebM versions of the video using two separate {{domxref("WindowOrWorkerGlobalScope/fetch", "WindowOrWorkerGlobalScope.fetch()")}} requests. We then use the {{domxref("Response.blob()")}} method to extract each response's body as a blob, giving us an object representation of the videos that can be stored and displayed later on.</p>
+  <p>The following snippet is taken from inside <code>fetchVideoFromNetwork()</code> — here we fetch MP4 and WebM versions of the video using two separate {{domxref("fetch()")}} requests. We then use the {{domxref("Response.blob()")}} method to extract each response's body as a blob, giving us an object representation of the videos that can be stored and displayed later on.</p>
 
   <p>We have a problem here though — these two requests are both asynchronous, but we only want to try to display or store the video when both promises have fulfilled. Fortunately there is a built-in method that handles such a problem — {{jsxref("Promise.all()")}}. This takes one argument — references to all the individual promises you want to check for fulfillment placed in an array — and is itself promise-based.</p>
 
@@ -730,7 +730,7 @@ Promise.all([mp4Blob, webmBlob]).then(function(values) {
 
 <p>Inside this block we use {{domxref("CacheStorage.match()")}} to check whether a matching request (i.e. matches the URL) can be found in any cache. This promise fulfills with the matching response if a match is found, or <code>undefined</code> if it isn't.</p>
 
-<p>If a match is found, we return it as the custom response. If not, we <a href="/en-US/docs/Web/API/WindowOrWorkerGlobalScope/fetch">fetch()</a> the response from the network and return that instead.</p>
+<p>If a match is found, we return it as the custom response. If not, we <a href="/en-US/docs/Web/API/fetch">fetch()</a> the response from the network and return that instead.</p>
 
 <pre class="brush: js">self.addEventListener('fetch', function(e) {
   console.log(e.request.url);
