--- a/files/en-us/mozilla/firefox/releases/38/index.html
+++ b/files/en-us/mozilla/firefox/releases/38/index.html
@@ -85,7 +85,7 @@ tags:
 <h3 id="InterfacesAPIsDOM">Interfaces/APIs/DOM</h3>
 
 <ul>
- <li>The Fetch API {{domxref("WindowOrWorkerGlobalScope/fetch", "fetch()")}} method has been implemented ({{bug(1039846)}}).</li>
+ <li>The Fetch API {{domxref("fetch()")}} method has been implemented ({{bug(1039846)}}).</li>
  <li>{{domxref("BroadcastChannel")}} API has been implemented and is available in <a href="/en-US/docs/Web/API/Web_Workers_API">Web Workers</a> ({{bug(966439)}} and {{bug(1121420)}}).</li>
  <li>The Console API is now available in <a href="/en-US/docs/Web/API/Web_Workers_API">Web Workers</a>.</li>
  <li>{{domxref("CanvasRenderingContext2D.clearHitRegions()")}} has been implemented ({{bug(1119527)}}).</li>
