--- a/files/en-us/mozilla/firefox/releases/36/index.html
+++ b/files/en-us/mozilla/firefox/releases/36/index.html
@@ -166,7 +166,7 @@ tags:
 
 <dl>
  <dt><code>TYPE_FETCH</code></dt>
- <dd>Indicates a content load request initiated by the {{domxref("WindowOrWorkerGlobalScope/fetch", "GlobalFetch.fetch()")}} method.</dd>
+ <dd>Indicates a content load request initiated by the {{domxref("fetch()")}} method.</dd>
  <dt><code>TYPE_IMAGESET</code></dt>
  <dd>Indicates a request to load an {{HTMLElement("img")}} (with the {{htmlattrxref("srcset", "img")}} attribute or {{HTMLElement("picture")}} element.</dd>
 </dl>
