--- a/files/en-us/mozilla/firefox/releases/38/index.html
+++ b/files/en-us/mozilla/firefox/releases/38/index.html
@@ -94,7 +94,7 @@ tags:
  <li>{{domxref("KeyboardEvent.code")}} now supports special keys on Sun keyboards on Linux, Android, and Firefox OS. ({{bug(1020139)}})</li>
  <li>The {{domxref("TextEncoder.TextEncoder", "TextEncoder()")}} constructor has been changed to match the spec: when an invalid parameter is passed, the {{exception("RangeError")}} exception is now raised, rather than the erroneous {{exception("TypeError")}} ({{bug(1125766)}}).</li>
  <li>The User Timing API, adding {{domxref("Performance.mark()")}}, {{domxref("Performance.clearMarks()")}}, {{domxref("Performance.measure()")}}, and {{domxref("Performance.clearMeasures()")}} has been implemented ({{bug(782751)}}).</li>
- <li>The prefixed version of {{domxref("WindowOrWorkerGlobalScope/indexedDB", "indexedDB")}}, <code>mozIndexedDB</code> has been removed ({{bug(975699)}}).</li>
+ <li>The prefixed version of {{domxref("indexedDB")}}, <code>mozIndexedDB</code> has been removed ({{bug(975699)}}).</li>
  <li>The {{event("DOMContentLoaded")}} event is no longer cancelable ({{bug(1134559)}}).</li>
  <li>You can now use <a href="/en-US/docs/Web/API/WebSockets_API">WebSockets</a> in <a href="/en-US/docs/Web/API/Web_Workers_API">Workers</a> ({{bug(504553)}}).</li>
  <li>The {{domxref("XMLHttpRequest.responseType")}} and {{domxref("XMLHttpRequest.withCredentials")}} properties can now be set before calling {{domxref("XMLHttpRequest.open()")}} ({{bug(707484)}}).</li>
