Refine code example in “async and await” doc (#8492)

--- a/files/en-us/learn/javascript/asynchronous/async_await/index.html
+++ b/files/en-us/learn/javascript/asynchronous/async_await/index.html
@@ -58,9 +58,9 @@ hello();</pre>
 <pre class="brush: js">let hello = async function() { return "Hello" };
 hello();</pre>
 
-<p>And you can use arrow functions:</p>
+<p>And you can use <a href="/en-US/docs/Web/JavaScript/Reference/Functions/Arrow_functions">arrow functions</a>:</p>
 
-<pre class="brush: js">let hello = async () =&gt; { return "Hello" };</pre>
+<pre class="brush: js">let hello = async () =&gt; "Hello";</pre>
 
 <p>These all do basically the same thing.</p>
 
