Move isSecureContext; delete Window.isSecureContext

--- a/files/en-us/web/security/secure_contexts/index.html
+++ b/files/en-us/web/security/secure_contexts/index.html
@@ -40,7 +40,7 @@ tags:
 
 <h2 id="Feature_detection">Feature detection</h2>
 
-<p>Pages can use feature detection to check whether they are in a secure context or not by using the {{domxref("WindowOrWorkerGlobalScope.isSecureContext", "isSecureContext")}} boolean, which is exposed on the global scope.</p>
+<p>Pages can use feature detection to check whether they are in a secure context or not by using the {{domxref("isSecureContext")}} boolean, which is exposed on the global scope.</p>
 
 <pre class="brush: js">if (window.isSecureContext) {
   // Page is a secure context so service workers are now available
@@ -70,7 +70,7 @@ tags:
 
 <ul>
  <li><a href="/en-US/docs/Web/Security/Secure_Contexts/features_restricted_to_secure_contexts">Platform features restricted to secure contexts</a> — a list of the features available only in secure contexts</li>
- <li>{{domxref("Window.isSecureContext")}}</li>
+ <li>{{domxref("isSecureContext")}}</li>
  <li><a href="https://permission.site">https://permission.site</a> — A site that allows you to check what API permission checks your browser employs, over HTTP and HTTPS</li>
  <li><a href="/en-US/docs/Web/HTTP/Headers/Strict-Transport-Security">Strict-Transport-Security</a> HTTP header</li>
 </ul>
