--- a/files/en-us/mozilla/firefox/releases/52/index.html
+++ b/files/en-us/mozilla/firefox/releases/52/index.html
@@ -121,7 +121,7 @@ tags:
  <li>Only HTML elements, plus the {{HTMLElement("svg")}} and {{HTMLElement("math")}} elements, can be put into full-screen mode by calling {{domxref("Element.requestFullScreen()")}} ({{bug(1305928)}}).</li>
  <li><a href="/en-US/docs/Web/API/Touch_events">Touch events</a> have been reenabled on Windows desktop platforms — see {{bug(1244402)}}. (They were disabled in Firefox 24 because they broke a number of major sites; see {{bug(888304)}}.)</li>
  <li>The {{event("focusin")}} and {{event("focusout")}} events are now implemented ({{bug("687787")}}).</li>
- <li>The {{domxref("WindowOrWorkerGlobalScope.isSecureContext")}} property has been implemented (see {{bug(1269052)}}).</li>
+ <li>The {{domxref("isSecureContext")}} property has been implemented (see {{bug(1269052)}}).</li>
  <li>The <a href="/en-US/docs/Web/Manifest">Web App Manifest</a> install event has been renamed appinstalled (see {{domxref("Window.onappinstalled")}}, {{event("appinstalled")}}) to avoid confusion with the service worker install event (see {{domxref("ServiceWorkerGlobalScope.oninstall")}}). See {{bug(1309099)}} for more details about this update.</li>
  <li>The {{domxref("DataTransfer.types")}} property of the <a href="/en-US/docs/Web/API/HTML_Drag_and_Drop_API">Drag and drop API</a> now returns a frozen array of {{domxref("DOMString")}}s rather than a {{domxref("DOMStringList")}} (see {{bug(1298243)}}).</li>
  <li>The {{Event("loadstart")}} and {{Event("loadend")}} events are now fired on {{htmlelement("img")}} elements (see {{bug(1264769)}}, and also see {{domxref("GlobalEventHandlers.onloadstart")}} and {{domxref("GlobalEventHandlers.onloadend")}}). </li>
