--- a/files/en-us/mozilla/firefox/releases/54/index.html
+++ b/files/en-us/mozilla/firefox/releases/54/index.html
@@ -59,7 +59,7 @@ tags:
 
 <ul>
  <li>{{domxref("WorkerGlobalScope.close")}} is now available on {{domxref("DedicatedWorkerGlobalScope.close", "DedicatedWorkerGlobalScope")}} and {{domxref("SharedWorkerGlobalScope.close", "SharedWorkerGlobalScope")}} instead. This change was made to stop <code>close()</code> being available on service workers, as it isn't supposed to be used there and always throws an exception when called (see {{bug(1336043)}}).</li>
- <li>The {{domxref("WindowOrWorkerGlobalScope.origin")}} property has been implemented (see {{bug(1306170)}}).</li>
+ <li>The {{domxref("origin")}} property has been implemented (see {{bug(1306170)}}).</li>
  <li>The {{domxref("Client.type")}} property has been implemented (see {{bug(1339844)}}).</li>
  <li>{{domxref("Clients.matchAll()")}} now returns {{domxref("Client")}} objects in most recently focused order (see {{bug(1266747)}}).</li>
  <li>Some changes have been made to the observed behavior when the {{domxref("Request.Request","Request()")}} constructor is passed an existing {{domxref("Request")}} object instance to make a new instance. The following new behaviors are designed to retain security while making the constructor less likely to throw exceptions:
