--- a/files/en-us/mozilla/firefox/releases/69/index.html
+++ b/files/en-us/mozilla/firefox/releases/69/index.html
@@ -112,7 +112,7 @@ tags:
 
 <ul>
  <li>The <a href="/en-US/docs/Web/API/Resize_Observer_API">Resize Observer API</a> is supported by default ({{bug(1543839)}}).</li>
- <li>The Microtask API ({{domxref("WindowOrWorkerGlobalScope.queueMicrotask()")}}) has been implemented ({{bug(1480236)}}).</li>
+ <li>The Microtask API ({{domxref("queueMicrotask()")}}) has been implemented ({{bug(1480236)}}).</li>
 </ul>
 
 <h4 id="DOM">DOM</h4>
