--- a/files/en-us/learn/javascript/asynchronous/choosing_the_right_approach/index.html
+++ b/files/en-us/learn/javascript/asynchronous/choosing_the_right_approach/index.html
@@ -169,7 +169,7 @@ setTimeout(function run() {
 
 <h2 id="setInterval">setInterval()</h2>
 
-<p><code><a href="/en-US/docs/Web/API/WindowOrWorkerGlobalScope/setInterval">setInterval()</a></code> is a method that allows you to run a function repeatedly with a set interval of time between each execution. Not as efficient as <code><a href="/en-US/docs/Web/API/window/requestAnimationFrame">requestAnimationFrame()</a></code>, but allows you to choose a running rate/frame rate.</p>
+<p><code><a href="/en-US/docs/Web/API/setInterval">setInterval()</a></code> is a method that allows you to run a function repeatedly with a set interval of time between each execution. Not as efficient as <code><a href="/en-US/docs/Web/API/window/requestAnimationFrame">requestAnimationFrame()</a></code>, but allows you to choose a running rate/frame rate.</p>
 
 <table class="standard-table">
  <caption>Useful for...</caption>
@@ -209,13 +209,13 @@ const createClock = setInterval(displayTime, 1000);</pre>
 
 <h3 id="Browser_compatibility_3">Browser compatibility</h3>
 
-<p>{{Compat("api.WindowOrWorkerGlobalScope.setInterval")}}</p>
+<p>{{Compat("api.setInterval")}}</p>
 
 <h3 id="Further_information_3">Further information</h3>
 
 <ul>
- <li><a href="/en-US/docs/Learn/JavaScript/Asynchronous/Timeouts_and_intervals">Cooperative asynchronous JavaScript: Timeouts and intervals</a>, in particular <a href="/en-US/docs/Web/API/WindowOrWorkerGlobalScope/setInterval">setInterval()</a></li>
- <li><a href="/en-US/docs/Web/API/WindowOrWorkerGlobalScope/setInterval">setInterval() reference</a></li>
+ <li><a href="/en-US/docs/Learn/JavaScript/Asynchronous/Timeouts_and_intervals">Cooperative asynchronous JavaScript: Timeouts and intervals</a>, in particular <a href="/en-US/docs/Web/API/setInterval">setInterval()</a></li>
+ <li><a href="/en-US/docs/Web/API/setInterval">setInterval() reference</a></li>
 </ul>
 
 <h2 id="requestAnimationFrame">requestAnimationFrame()</h2>
