--- a/files/en-us/learn/javascript/asynchronous/choosing_the_right_approach/index.html
+++ b/files/en-us/learn/javascript/asynchronous/choosing_the_right_approach/index.html
@@ -107,7 +107,7 @@ loadAsset('coffee.jpg', 'blob', displayImage);</pre>
 
 <h2 id="setTimeout">setTimeout()</h2>
 
-<p><code><a href="/en-US/docs/Web/API/WindowOrWorkerGlobalScope/setTimeout">setTimeout()</a></code> is a method that allows you to run a function after an arbitrary amount of time has passed.</p>
+<p><code><a href="/en-US/docs/Web/API/setTimeout">setTimeout()</a></code> is a method that allows you to run a function after an arbitrary amount of time has passed.</p>
 
 <table class="standard-table">
  <caption>Useful for...</caption>
@@ -158,13 +158,13 @@ setTimeout(function run() {
 
 <h3 id="Browser_compatibility_2">Browser compatibility</h3>
 
-<p>{{Compat("api.WindowOrWorkerGlobalScope.setTimeout")}}</p>
+<p>{{Compat("api.setTimeout")}}</p>
 
 <h3 id="Further_information_2">Further information</h3>
 
 <ul>
  <li><a href="/en-US/docs/Learn/JavaScript/Asynchronous/Timeouts_and_intervals">Cooperative asynchronous JavaScript: Timeouts and intervals</a>, in particular <a href="/en-US/docs/Learn/JavaScript/Asynchronous/Timeouts_and_intervals#settimeout()">setTimeout()</a></li>
- <li><a href="/en-US/docs/Web/API/WindowOrWorkerGlobalScope/setTimeout">setTimeout() reference</a></li>
+ <li><a href="/en-US/docs/Web/API/setTimeout">setTimeout() reference</a></li>
 </ul>
 
 <h2 id="setInterval">setInterval()</h2>
