--- a/files/en-us/mozilla/firefox/releases/55/index.html
+++ b/files/en-us/mozilla/firefox/releases/55/index.html
@@ -108,7 +108,7 @@ tags:
 
 <ul>
  <li>Workers and shared workers can now be created with an identifying <code>name</code> property. See the {{domxref("Worker.Worker", "Worker()")}} and {{domxref("SharedWorker.SharedWorker", "SharedWorker()")}} constructors, and the {{domxref("DedicatedWorkerGlobalScope")}} and {{domxref("SharedWorkerGlobalScope")}} interfaces. ({{bug(1364297)}}).</li>
- <li>{{domxref("WindowOrWorkerGlobalScope.setTimeout","setTimeout()")}} and {{domxref("setInterval()")}} are now subject to minimum interval throttling for tracking scripts in background tabs — see <a href="/en-US/docs/Web/API/WindowOrWorkerGlobalScope/setTimeout#throttling_of_tracking_timeout_scripts">Throttling of tracking timeout scripts</a> ({{bug(1355311)}}).</li>
+ <li>{{domxref("setTimeout()")}} and {{domxref("setInterval()")}} are now subject to minimum interval throttling for tracking scripts in background tabs — see <a href="/en-US/docs/Web/API/setTimeout#throttling_of_tracking_timeout_scripts">Throttling of tracking timeout scripts</a> ({{bug(1355311)}}).</li>
 </ul>
 
 <h4 id="Service_WorkersPush">Service Workers/Push</h4>
