--- a/files/en-us/learn/javascript/client-side_web_apis/drawing_graphics/index.html
+++ b/files/en-us/learn/javascript/client-side_web_apis/drawing_graphics/index.html
@@ -618,7 +618,7 @@ let posX = 0;</pre>
  <li>
   <p>Now we'll alter the <code>sprite</code> value after each draw — well, after some of them anyway. Add the following block to the bottom of the <code>draw()</code> function:</p>
 
-  <pre class="brush: js">  if (posX % 13 === 0) {
+  <pre class="brush: js">  if (posX % 20 === 0) {
     if (sprite === 5) {
       sprite = 0;
     } else {
@@ -626,7 +626,7 @@ let posX = 0;</pre>
     }
   }</pre>
 
-  <p>We are wrapping the whole block in <code> if (posX % 13 === 0) { ... }</code>. We use the modulo (<code>%</code>) operator (also known as the <a href="/en-US/docs/Web/JavaScript/Reference/Operators#remainder_()">remainder operator</a>) to check whether the <code>posX</code> value can be exactly divided by 13 with no remainder. If so, we move on  to the next sprite by incrementing <code>sprite</code> (wrapping to 0 after we're done with sprite #5). This effectively means that we are only updating the sprite on every 13th frame, or roughly about 5 frames a second (<code>requestAnimationFrame()</code> calls us at up to 60 frames per second if possible). We are deliberately slowing down the frame rate because we only have six sprites to work with, and if we display one every 60th of a second, our character will move way too fast!</p>
+  <p>We are wrapping the whole block in <code> if (posX % 20 === 0) { ... }</code>. We use the modulo (<code>%</code>) operator (also known as the <a href="/en-US/docs/Web/JavaScript/Reference/Operators#remainder_()">remainder operator</a>) to check whether the <code>posX</code> value can be exactly divided by 20 with no remainder. If so, we move on  to the next sprite by incrementing <code>sprite</code> (wrapping to 0 after we're done with sprite #5). This effectively means that we are only updating the sprite on every 20th frame, or 5 frames a second (<code>requestAnimationFrame()</code> calls us at up to 60 frames per second if possible). We are deliberately slowing down the frame rate because we only have six sprites to work with, and if we display one every 60th of a second, our character will animate way too fast!</p>
 
   <p>Inside the outer block we use an <code><a href="/en-US/docs/Web/JavaScript/Reference/Statements/if...else">if ... else</a></code> statement to check whether the <code>sprite</code> value is at 5 (the last sprite, given that the sprite numbers run from 0 to 5). If we are showing the last sprite already, we reset <code>sprite</code> back to 0; if not we just increment it by 1.</p>
  </li>
