--- a/files/en-us/learn/tools_and_testing/understanding_client-side_tools/introducing_complete_toolchain/index.html
+++ b/files/en-us/learn/tools_and_testing/understanding_client-side_tools/introducing_complete_toolchain/index.html
@@ -281,7 +281,7 @@ cd will-it-miss</pre>
 <p>We have our project files in place. That’s all we need to do for now!</p>
 
 <div class="notecard note">
-<p><strong>Note</strong>: If you want to just take our existing project and set it up, ready to use, you could go into the root directory of the unzipped downloaded, and run one single installation command to install all of the project’s dependencies: <code>npm install</code>. This is possible because we installed all the tools locally, not globally, and highlights why it is such a powerful option.</p>
+<p><strong>Note</strong>: To set up the project on your local machine, go to the root directory of the unzipped folder, open a terminal in that location, and execute the <code>npm install</code> command in the terminal. This will install all of the project dependencies that are stored in the `package.json` file.</p>
 </div>
 
 <h4 id="Installing_our_tools">Installing our tools</h4>
