--- a/files/en-us/mdn/contribute/feedback/index.html
+++ b/files/en-us/mdn/contribute/feedback/index.html
@@ -46,7 +46,7 @@ tags:
 
 <h3 id="Documentation_issues">Documentation issues</h3>
 
-<p>If you see a problem in the documentation and can't fix it yourself for any reason, you can <a href="https://github.com/mdn/content/issues/new" title="Report a documentation content problem.">report the issue</a>! You can use this form for any documentation issue at all, for example:</p>
+<p>If you see a problem in the documentation and can't fix it yourself for any reason, you can <a href="https://github.com/mdn/content/issues/new/choose" title="Report a documentation content problem.">report the issue</a>! Within the link, we provided comprehensive templates. You can alse use this template for some little problems:</p>
 
 <ul>
  <li>a simple correction</li>
