--- a/files/en-us/web/html/element/canvas/index.html
+++ b/files/en-us/web/html/element/canvas/index.html
@@ -174,6 +174,6 @@ ctx.fillRect(10, 10, 100, 100);</pre>
  <li><a href="/en-US/docs/Web/API/Canvas_API">MDN canvas portal</a></li>
  <li><a href="/en-US/docs/Web/API/Canvas_API/Tutorial">Canvas tutorial</a></li>
  <li><a href="https://simon.html5.org/dump/html5-canvas-cheat-sheet.html">Canvas cheat sheet</a></li>
- <li><a href="/en-US/docs/Web/Demos_of_open_web_technologies">Canvas-related demos</a></li>
+ <li><a href="/en-US/docs/Web/Demos#canvas">Canvas-related demos</a></li>
  <li><a href="https://developer.apple.com/library/archive/documentation/AudioVideo/Conceptual/HTML-canvas-guide/Introduction/Introduction.html">Canvas introduction by Apple</a></li>
 </ul>
