Fixes 7968 - mocha -> npx mocha

--- a/files/en-us/learn/tools_and_testing/cross_browser_testing/your_own_automation_environment/index.html
+++ b/files/en-us/learn/tools_and_testing/cross_browser_testing/your_own_automation_environment/index.html
@@ -372,7 +372,7 @@ input.</span>sendKeys('Filling in my form');</pre>
   <pre class="brush: bash">npm install --save-dev mocha</pre>
  </li>
  <li>you can now run the test (and any others you put inside your <code>test</code> directory) using the following command:
-  <pre class="brush: bash">mocha --no-timeouts</pre>
+  <pre class="brush: bash">npx mocha --no-timeouts</pre>
  </li>
  <li>You should include the <code>--no-timeouts</code> flag to make sure your tests don't end up failing because of Mocha's arbitrary timeout (which is 3 seconds).</li>
 </ol>
