Update devtools links of chrome and edge

--- a/files/en-us/learn/common_questions/what_are_browser_developer_tools/index.html
+++ b/files/en-us/learn/common_questions/what_are_browser_developer_tools/index.html
@@ -116,7 +116,7 @@ tags:
 <ul>
  <li><a href="/en-US/docs/Tools/Page_Inspector">Firefox Page inspector</a></li>
  <li><a href="https://msdn.microsoft.com/en-us/library/ie/dn255008%28v=vs.85%29.aspx">IE DOM Explorer</a></li>
- <li><a href="https://developer.chrome.com/devtools/docs/dom-and-styles">Chrome DOM inspector</a> (Opera's inspector works the same as this)</li>
+ <li><a href="https://developer.chrome.com/docs/devtools/dom/">Chrome DOM inspector</a> (Opera's inspector works the same as this)</li>
  <li><a href="https://developer.apple.com/library/safari/documentation/AppleApplications/Conceptual/Safari_Developer_Guide/ResourcesandtheDOM/ResourcesandtheDOM.html#//apple_ref/doc/uid/TP40007874-CH3-SW1">Safari DOM inspector and style explorer</a></li>
 </ul>
 
@@ -174,8 +174,8 @@ tags:
 
 <ul>
  <li><a href="/en-US/docs/Tools/Debugger">Firefox JavaScript Debugger</a></li>
- <li><a href="https://docs.microsoft.com/en-us/microsoft-edge/devtools-guide/debugger">Microsoft Edge Debugger</a></li>
- <li><a href="https://developers.google.com/web/tools/chrome-devtools/javascript/">Chrome Debugger</a></li>
+ <li><a href="https://docs.microsoft.com/en-us/archive/microsoft-edge/legacy/developer/devtools-guide/debugger">Microsoft Edge Debugger</a></li>
+ <li><a href="https://developer.chrome.com/docs/devtools/javascript/">Chrome Debugger</a></li>
  <li><a href="https://developer.apple.com/safari/tools/">Safari Debugger</a></li>
 </ul>
 
@@ -232,7 +232,7 @@ document.querySelector('h1').appendChild(myWordmark);</pre>
 <ul>
  <li><a href="/en-US/docs/Tools/Web_Console">Firefox Web Console</a></li>
  <li><a href="https://msdn.microsoft.com/en-us/library/ie/dn255006%28v=vs.85%29.aspx">IE JavaScript console</a></li>
- <li><a href="https://developer.chrome.com/devtools/docs/console">Chrome JavaScript Console</a> (Opera's inspector works the same as this)</li>
+ <li><a href="https://developer.chrome.com/docs/devtools/console/">Chrome JavaScript Console</a> (Opera's inspector works the same as this)</li>
  <li><a href="https://developer.apple.com/library/safari/documentation/AppleApplications/Conceptual/Safari_Developer_Guide/Console/Console.html#//apple_ref/doc/uid/TP40007874-CH6-SW1">Safari Console</a></li>
 </ul>
 
