--- a/files/en-us/learn/server-side/django/django_assessment_blog/index.html
+++ b/files/en-us/learn/server-side/django/django_assessment_blog/index.html
@@ -17,7 +17,7 @@ tags:
 
 <p>In this assessment you'll use the Django knowledge you've picked up in the <a href="/en-US/docs/Learn/Server-side/Django">Django Web Framework (Python)</a> module to create a very basic blog.</p>
 
-<table class="learn-box standard-table">
+<table>
  <tbody>
   <tr>
    <th scope="row">Prerequisites:</th>
