--- a/files/en-us/learn/server-side/express_nodejs/forms/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/forms/index.html
@@ -17,7 +17,7 @@ tags:
 
 <p>In this tutorial we'll show you how to work with HTML Forms in Express using Pug. In particular, we'll discuss how to write forms to create, update, and delete documents from the site's database.</p>
 
-<table class="learn-box standard-table">
+<table>
  <tbody>
   <tr>
    <th scope="row">Prerequisites:</th>
