--- a/files/en-us/learn/server-side/django/admin_site/index.html
+++ b/files/en-us/learn/server-side/django/admin_site/index.html
@@ -18,7 +18,8 @@ tags:
 
 <p>Now that we've created models for the <a href="/en-US/docs/Learn/Server-side/Django/Tutorial_local_library_website">LocalLibrary</a> website, we'll use the Django Admin site to add some "real" book data. First we'll show you how to register the models with the admin site, then we'll show you how to login and create some data. At the end of the article we will show some of the ways you can further improve the presentation of the Admin site.</p>
 
-<table class="learn-box standard-table">
+<p>original</p>
+<table>
  <tbody>
   <tr>
    <th scope="row">Prerequisites:</th>
@@ -30,6 +31,63 @@ tags:
   </tr>
  </tbody>
 </table>
+
+<p>remove classes - standard-table and learn-box</p>
+<table>
+    <tbody>
+     <tr>
+      <th scope="row">Prerequisites:</th>
+      <td>First complete: <a href="/en-US/docs/Learn/Server-side/Django/Models">Django Tutorial Part 3: Using models</a>.</td>
+     </tr>
+     <tr>
+      <th scope="row">Objective:</th>
+      <td>To understand the benefits and limitations of the Django admin site, and use it to create some records for our models.</td>
+     </tr>
+    </tbody>
+   </table>
+
+   <p>using class = properties</p>
+   <table class="properties">
+       <tbody>
+        <tr>
+         <th scope="row">Prerequisites:</th>
+         <td>First complete: <a href="/en-US/docs/Learn/Server-side/Django/Models">Django Tutorial Part 3: Using models</a>.</td>
+        </tr>
+        <tr>
+         <th scope="row">Objective:</th>
+         <td>To understand the benefits and limitations of the Django admin site, and use it to create some records for our models.</td>
+        </tr>
+       </tbody>
+      </table>
+   
+
+      <p>Githubable</p>
+      <table>
+        <thead>
+            <tr>
+              <th scope="col">Prerequisites</th>
+              <th scope="col">Objective:</th>
+            </tr>
+          </thead>
+          <tbody>
+           <tr>
+            <td>First complete: <a href="/en-US/docs/Learn/Server-side/Django/Models">Django Tutorial Part 3: Using models</a>.</td>
+            <td>To understand the benefits and limitations of the Django admin site, and use it to create some records for our models.</td>
+           </tr>
+          </tbody>
+         </table>   
+   
+   <ul>
+       <li><strong>Prerequisites:</strong> First complete: <a href="/en-US/docs/Learn/Server-side/Django/Models">Django Tutorial Part 3: Using models</a>.</li>
+       <li><strong>Objective:</strong> To understand the benefits and limitations of the Django admin site, and use it to create some records for our models.</li>
+   </ul>
+   
+   <dl>
+       <dt>Prerequisites:</dt>
+       <dd>First complete: <a href="/en-US/docs/Learn/Server-side/Django/Models">Django Tutorial Part 3: Using models</a>.</dd>
+       <dt>Objective:</dt>
+       <dd>To understand the benefits and limitations of the Django admin site, and use it to create some records for our models.</dd>
+   </dl>
 
 <h2 id="Overview">Overview</h2>
 
