--- a/files/en-us/learn/server-side/django/web_application_security/index.html
+++ b/files/en-us/learn/server-side/django/web_application_security/index.html
@@ -19,7 +19,7 @@ tags:
 
 <p>Protecting user data is an essential part of any website design. We previously explained some of the more common security threats in the article <a href="/en-US/docs/Web/Security">Web security</a> — this article provides a practical demonstration of how Django's in-built protections handle such threats.</p>
 
-<table class="learn-box standard-table">
+<table>
  <tbody>
   <tr>
    <th scope="row">Prerequisites:</th>
