Fixes #6593 - Updates one link and removes another

--- a/files/en-us/web/webdriver/index.html
+++ b/files/en-us/web/webdriver/index.html
@@ -18,7 +18,7 @@ tags:
 
 <h2 id="Usage">Usage</h2>
 
-<p>So what does WebDriver let you do and what does it look like? Since WebDriver is programming language neutral, the answer to this question <a href="/en-US/docs/Web/WebDriver/Clients">depends on which WebDriver client you’re using</a> and the choice of language.</p>
+<p>So what does WebDriver let you do and what does it look like? Since WebDriver is programming language neutral, the answer to this question depends on which WebDriver client you’re using and the choice of language.</p>
 
 <p>But using a popular client written in Python, your interaction with WebDriver might look like this:</p>
 
@@ -90,7 +90,7 @@ with webdriver.Firefox() as driver:
 
 <ul>
  <li><a href="/en-US/docs/Learn/Tools_and_testing/Cross_browser_testing">Cross browser testing</a></li>
- <li><a href="https://seleniumhq.github.io/docs/">Selenium documentation</a> (work in progress)</li>
+ <li><a href="https://www.selenium.dev/documentation/">Selenium documentation</a></li>
 </ul>
 
 <p>{{QuickLinksWithSubpages}}</p>
