--- a/files/en-us/learn/server-side/django/development_environment/index.html
+++ b/files/en-us/learn/server-side/django/development_environment/index.html
@@ -88,7 +88,7 @@ tags:
 
 <h4 id="Which_database">Which database?</h4>
 
-<p>Django supports five main databases (PostgreSQL, MariaDB, MySQL, Oracle, and SQLite), and there are community libraries that provide varying levels of support for other popular SQL and NoSQL databases. We recommend that you select the same database for both production and development (although Django abstracts many of the database differences using its Object-Relational Mapper (ORM), there are still <a href="https://docs.djangoproject.com/en/3.1/ref/databases/">potential issues</a> that are better to avoid).</p>
+<p>Django officially supports the PostgreSQL, MariaDB, MySQL, Oracle, and SQLite databases, and there are community libraries that provide varying levels of support for other popular SQL and NoSQL databases. We recommend that you select the same database for both production and development (although Django abstracts many of the database differences using its Object-Relational Mapper (ORM), there are still <a href="https://docs.djangoproject.com/en/3.1/ref/databases/">potential issues</a> that are better to avoid).</p>
 
 <p>For this article (and most of this module) we will be using the <em>SQLite</em> database, which stores its data in a file. SQLite is intended for use as a lightweight database and can’t support a high level of concurrency. It is, however, an excellent choice for applications that are primarily read-only.</p>
 
