--- a/files/en-us/web/tutorials/index.html
+++ b/files/en-us/web/tutorials/index.html
@@ -166,7 +166,7 @@ tags:
  <dd>A recap of the JavaScript programming language aimed at intermediate-level developers.</dd>
  <dt><a href="https://eloquentjavascript.net/" rel="external">Eloquent JavaScript</a></dt>
  <dd>A comprehensive guide to intermediate and advanced JavaScript methodologies.</dd>
- <dt><a href="https://speakingjs.com/es5/" rel="external">Speaking JavaScript</a></dt>
+ <dt><a href="http://speakingjs.com/es5/" rel="external">Speaking JavaScript</a></dt>
  <dd>For programmers who want to learn JavaScript quickly and properly, and for JavaScript programmers who want to deepen their skills and/or look up specific topics.</dd>
  <dt><a href="https://www.addyosmani.com/resources/essentialjsdesignpatterns/book/" rel="external">Essential JavaScript Design Patterns</a></dt>
  <dd>An introduction to essential JavaScript design patterns.</dd>
