Apply suggestions from code review
Co-authored-by: Jean-Yves Perrier <jypenator@gmail.com>

--- a/files/en-us/glossary/index.html
+++ b/files/en-us/glossary/index.html
@@ -12,7 +12,7 @@ tags:
 ---
 <p>Web technologies contain long lists of jargon and abbreviations that are used in documentation and coding. This glossary provides definitions of words and abbreviations you need to know to successfully understand and build for the web.</p>
 
-<p>Glossary terms can be selected from the sidebar.</p>
+<p>Glossary terms can be selected from the sidebar (or listed below on mobile devices).</p>
 
 <div class="notecard note">
   <p><strong>Note:</strong> This glossary is a never-ending work in progress. You can help improve it by <a href="/en-US/docs/MDN/Contribute/Howto/Write_a_new_entry_in_the_Glossary">writing new entries</a> or by making the existing ones better.</p>
