--- a/files/en-us/mozilla/add-ons/webextensions/firefox_differentiators/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/firefox_differentiators/index.html
@@ -1,5 +1,5 @@
 ---
-title: Firefox Differentiators
+title: Firefox differentiators
 slug: Mozilla/Add-ons/WebExtensions/Firefox_differentiators
 tags:
   - Add-ons
@@ -38,7 +38,7 @@ tags:
   </tr>
   <tr>
    <td>
-    <p>Help users locate content of their interest in a web page, with the ability to <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/find">find and highlight text in a webpage</a>.</p>
+    <p>Help users locate content of interest in a web page, with the ability to <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/find">find and highlight text in a webpage</a>.</p>
    </td>
    <td><img alt="Illustration of find highlighting text in page content" src="find.png"></td>
   </tr>
