Clarifies which details

--- a/files/en-us/learn/getting_started_with_the_web/what_will_your_website_look_like/index.html
+++ b/files/en-us/learn/getting_started_with_the_web/what_will_your_website_look_like/index.html
@@ -86,7 +86,7 @@ tags:
 <ol>
  <li>Go to <a href="https://www.google.com/fonts">Google Fonts</a> and find one you like.</li>
  <li>Copy the lines of code Google gives you into your text editor to save for later.</li>
- <li>For more details, see <a href="https://developers.google.com/fonts/docs/getting_started"> this page</a></li> 
+ <li>For more details about using Google Fonts, see <a href="https://developers.google.com/fonts/docs/getting_started">this page</a></li> 
 </ol>
 
 <p>{{PreviousMenuNext("Learn/Getting_started_with_the_web/Installing_basic_software", "Learn/Getting_started_with_the_web/Dealing_with_files", "Learn/Getting_started_with_the_web")}}</p>
