--- a/files/en-us/web/accessibility/aria/aria_techniques/using_the_aria-valuemin_attribute/index.html
+++ b/files/en-us/web/accessibility/aria/aria_techniques/using_the_aria-valuemin_attribute/index.html
@@ -3,7 +3,9 @@ title: Using the aria-valuemin attribute
 slug: Web/Accessibility/ARIA/ARIA_Techniques/Using_the_aria-valuemin_attribute
 tags:
   - ARIA
+  - ARIA role
   - Accessibility
+  - Reference
   - NeedsContent
 ---
 <p><span class="seoSummary">The <a href="https://www.w3.org/TR/wai-aria/states_and_properties#aria-valuemin" rel="external">aria-valuemin</a> attribute is used to define the minimum value allowed for a range widget such as a slider, spinbutton or progressbar. If the <a class="property-reference" href="/en-US/docs/Web/Accessibility/ARIA/ARIA_Techniques/Using_the_aria-valuenow_attribute"><code>aria-valuenow</code></a> has a known maximum and minimum, the author <strong class="rfc2119">SHOULD</strong> provide properties for <a href="/en-US/docs/Web/Accessibility/ARIA/ARIA_Techniques/Using_the_aria-valuemax_attribute"><code>aria-valuemax</code></a> and <code>aria-valuemin</code>.The value of <code>aria-valuemin</code> <strong class="rfc2119">MUST</strong> be less than or equal to the value of <a href="/en-US/docs/Web/Accessibility/ARIA/ARIA_Techniques/Using_the_aria-valuemax_attribute"><code>aria-valuemax</code></a>.</span></p>
