--- a/files/en-us/web/accessibility/aria/aria_techniques/using_the_aria-required_attribute/index.html
+++ b/files/en-us/web/accessibility/aria/aria_techniques/using_the_aria-required_attribute/index.html
@@ -3,7 +3,9 @@ title: Using the aria-required attribute
 slug: Web/Accessibility/ARIA/ARIA_Techniques/Using_the_aria-required_attribute
 tags:
   - ARIA
+  - ARIA role
   - Accessibility
+  - Reference
   - NeedsContent
 ---
 <h3 id="Description">Description</h3>
