Adds page for aria-meter

--- a/files/en-us/web/accessibility/aria/roles/index.html
+++ b/files/en-us/web/accessibility/aria/roles/index.html
@@ -40,6 +40,7 @@ tags:
  <li><a href="/en-US/docs/Web/Accessibility/ARIA/Roles/Menuiitem_Role">Menuitem</a></li>
  <li><a href="/en-US/docs/Web/Accessibility/ARIA/Roles/Menuitemcheckbox_Role">Menuitemcheckbox</a></li>
  <li><a href="/en-US/docs/Web/Accessibility/ARIA/Roles/Menuitemradio_Role">Menuitemradio</a></li>
+ <li><a href="/en-US/docs/Web/Accessibility/ARIA/Roles/Meter_Role">Meter</a></li>
  <li><a href="/en-US/docs/Web/Accessibility/ARIA/Roles/None_Role">none</a></li>
  <li><a href="/en-US/docs/Web/Accessibility/ARIA/Roles/Note_Role">note</a></li>
  <li><a href="/en-US/docs/Web/Accessibility/ARIA/Roles/Option_Role">Option</a></li>
