--- a/files/en-us/mozilla/firefox/releases/93/index.html
+++ b/files/en-us/mozilla/firefox/releases/93/index.html
@@ -17,6 +17,10 @@ tags:
 
 <h3 id="HTML">HTML</h3>
 
+<ul>
+  <li>The <code><a href="/en-US/docs/Web/Accessibility/ARIA/Roles/meter_role">aria-meter</a></code> role has been implemented ({{bug(1727616)}}).</li>
+</ul>
+
 <h4 id="removals_html">Removals</h4>
 
 <h3 id="CSS">CSS</h3>
