FF93 RelNotes: add global onsecuritypolicyviolation handler

--- a/files/en-us/mozilla/firefox/releases/93/index.html
+++ b/files/en-us/mozilla/firefox/releases/93/index.html
@@ -51,6 +51,11 @@ tags:
 
 <h4 id="DOM">DOM</h4>
 
+<ul>
+  <li>The {{domxref("GlobalEventHandlers.onsecuritypolicyviolation")}} event handler property is now supported.
+    This can be used to assign a handler for processing <a href="/en-US/docs/Web/API/Element/securitypolicyviolation_event"><code>securitypolicyviolation</code></a> events fired when there is a <a href="/en-US/docs/Web/HTTP/CSP">Content Security Policy</a> violation ({{bug(1727302)}}).</li>
+</ul>
+
 <h4 id="Media_WebRTC_and_Web_Audio">Media, WebRTC, and Web Audio</h4>
 
 <h4 id="removals_media">Removals</h4>
