docs: update code formatting

--- a/files/en-us/web/html/element/button/index.html
+++ b/files/en-us/web/html/element/button/index.html
@@ -139,7 +139,7 @@ browser-compat: html.elements.button
 
 <h4 id="Example_2">Example</h4>
 
-<pre>&lt;button name="favorite"&gt;
+<pre class="brush:html">&lt;button name="favorite"&gt;
   &lt;svg aria-hidden="true" viewBox="0 0 10 10"&gt;&lt;path d="M7 9L5 8 3 9V6L1 4h3l1-3 1 3h3L7 6z"/&gt;&lt;/svg&gt;
   Add to favorites
 &lt;/button&gt;
