--- a/files/en-us/web/http/headers/content-security-policy/script-src/index.html
+++ b/files/en-us/web/http/headers/content-security-policy/script-src/index.html
@@ -166,8 +166,8 @@ Content-Security-Policy: script-src &lt;source&gt; &lt;source&gt;;
  <li>{{jsxref("Function", "Function()")}}</li>
  <li>When passing a string literal like to methods like: <code>window.setTimeout("alert(\"Hello World!\");", 500);</code>
   <ul>
-   <li>{{domxref("WindowOrWorkerGlobalScope.setTimeout")}}</li>
-   <li>{{domxref("WindowOrWorkerGlobalScope.setInterval")}}</li>
+   <li>{{domxref("setTimeout()")}}</li>
+   <li>{{domxref("setInterval()")}}</li>
    <li>{{domxref("window.setImmediate")}}</li>
   </ul>
  </li>
